# ODOS

./: CITATION.cff  LICENSE.TXT  README.md  SETUP_BUILD_INSTALL_RUN.md
clang/lib/Driver/: Driver.cpp
clang/lib/Driver/ToolChains/: Clang.cpp  Gnu.cpp  Linux.cpp
clang/tools/clang-linker-wrapper/: ClangLinkerWrapper.cpp  LinkerWrapperOpts.td
openmp/libomptarget/plugins/: CMakeLists.txt
openmp/libomptarget/plugins-nextgen/: CMakeLists.txt
openmp/libomptarget/plugins-nextgen/bf/: CMakeLists.txt
openmp/libomptarget/plugins-nextgen/bf/dynamic_bf/: bf.cpp  bf.hpp
openmp/libomptarget/plugins-nextgen/bf/src/: rtl.cpp
openmp/libomptarget/plugins/bf/: CMakeLists.txt
openmp/libomptarget/plugins/bf/src/: .nfs000000003247777400000694  rtl.cpp
openmp/libomptarget/src/: rtl.cpp
openmp/libomptarget/tools/: CMakeLists.txt
openmp/libomptarget/tools/docaservice/: CMakeLists.txt  doca-omp-service.c
